# cellcutoff

./: .cardboardlint.yml  .gitignore  .roberto.yml  .travis.yml  CMakeLists.txt  CMakeListsGTest.txt.in  CONTRIBUTING.rst  HEADER  README  README.md  README.rst  cleancode.sh  doxygen.conf.in  make-source-dist.sh  updateheaders.py
cellcutoff/: CMakeLists.txt  cell.cpp  cell.h  config.h.in  decomposition.cpp  decomposition.h  iterators.cpp  iterators.h  sphere_slice.cpp  sphere_slice.h  vec3.h
cellcutoff/tests/: CMakeLists.txt  common.cpp  common.h  test_cell.cpp  test_decomposition.cpp  test_iterators.cpp  test_sphere_slice.cpp  test_usage.cpp
celllists/: CMakeLists.txt  cell.cpp  cell.h  common.cpp  common.h  config.h.in  decomposition.cpp  decomposition.h  iterators.cpp  iterators.h  sphere_slice.cpp  sphere_slice.h  vec3.cpp  vec3.h
celllists/tests/: CMakeLists.txt  common.cpp  common.h  test_cell.cpp  test_decomposition.cpp  test_iterators.cpp  test_sphere_slice.cpp  test_usage.cpp
python-cellcutoff/: .cardboardlint.yml  .coverage  .gitignore  .pylintrc  HEADER  README.rst  setup.cfg  setup.py
python-cellcutoff/cellcutoff/: __init__.py  cell.pxd  cellcutoff.pyx  ext.pxd  ext.pyx  iterators.pxd  test_cellcutoff.py  wrapping.cpp  wrapping.h  wrapping.pxd
python-cellcutoff/tools/: __init__.py  gitversion.py
python-cellcutoff/tools/conda.recipe/: meta.yaml
python-celllists/: cell.pxd  celllists.pyx  setup.py
python-celllists/celllists/: __init__.py  cell.pxd  celllists.pxd  celllists.pyx  test_celllists.py
tools/: .travis.yml.tpl  checkcode.sh  cleancode.sh  codecleaner.py  coverage_analyze.py  coverage_clean.sh  cpplint.py  pre-commit  template.py  updateheaders.py
tools/conda.recipe/: build.sh  meta.yaml
